我的 hugo 博客第7次提交

--- a/p/最优化作业/index.html
+++ b/p/最优化作业/index.html
@@ -930,12 +930,16 @@
 </code></pre></td></tr></table>
 </div>
 </div><h4 id="第一题图像展示">第一题图像展示</h4>
-<p><img src="/img/math/optimization/second_1.png"
-	
-	
-	
+<p><img src="/p/%E6%9C%80%E4%BC%98%E5%8C%96%E4%BD%9C%E4%B8%9A/second_1.png"
+	width="640"
+	height="480"
+	srcset="/p/%E6%9C%80%E4%BC%98%E5%8C%96%E4%BD%9C%E4%B8%9A/second_1_hu1e3251180ab13e17cc01b9ace515652e_55581_480x0_resize_box_2.png 480w, /p/%E6%9C%80%E4%BC%98%E5%8C%96%E4%BD%9C%E4%B8%9A/second_1_hu1e3251180ab13e17cc01b9ace515652e_55581_1024x0_resize_box_2.png 1024w"
 	loading="lazy"
 	
+	
+		class="gallery-image" 
+		data-flex-grow="133"
+		data-flex-basis="320px"
 	
 ></p>
 <h4 id="第二题运算结果">第二题运算结果</h4>
@@ -1086,12 +1090,16 @@
 </code></pre></td></tr></table>
 </div>
 </div><h4 id="第二题图像">第二题图像</h4>
-<p><img src="/img/math/optimization/second_2.png"
-	
-	
-	
+<p><img src="/p/%E6%9C%80%E4%BC%98%E5%8C%96%E4%BD%9C%E4%B8%9A/second_2.png"
+	width="640"
+	height="480"
+	srcset="/p/%E6%9C%80%E4%BC%98%E5%8C%96%E4%BD%9C%E4%B8%9A/second_2_hu8b66aa27a1e863abebc5fb52f1526592_229605_480x0_resize_box_2.png 480w, /p/%E6%9C%80%E4%BC%98%E5%8C%96%E4%BD%9C%E4%B8%9A/second_2_hu8b66aa27a1e863abebc5fb52f1526592_229605_1024x0_resize_box_2.png 1024w"
 	loading="lazy"
 	
+	
+		class="gallery-image" 
+		data-flex-grow="133"
+		data-flex-basis="320px"
 	
 ></p>
 
